Profile/static/css/profile.css
/* ----------- Profile settings  ----------- */
.settings, .settings:focus { background: darkturquoise; }
.settings:hover { background: #15b4a4; }
.fa-cog { transition: transform 0.3s; }
.options-link:hover .fa-cog { transform: rotate(90deg); }


.edit, .edit:focus { background: tomato; }
.edit:hover { background: #f46f24; }
.options-link:hover .fa-pencil-alt { animation: pencil 1s forwards; }

@-webkit-keyframes pencil {
  0%    { -webkit-transform:rotate(0deg);   }
	40%   { -webkit-transform:rotate(30deg);  }
	50%   { -webkit-transform:rotateZ(15deg); }
	60%   { -webkit-transform:rotateZ(30deg); }
	70%   { -webkit-transform:rotateZ(15deg); }
	80%   { -webkit-transform:rotateZ(30deg); }
	90%   { -webkit-transform:rotateZ(15deg); }
	100%  { -webkit-transform:rotateZ(30deg); }
}

@keyframes pencil {
  0%    { transform:rotate(0deg);   }
	40%   { transform:rotate(30deg);  }
	50%   { transform:rotateZ(15deg); }
	60%   { transform:rotateZ(30deg); }
	70%   { transform:rotateZ(15deg); }
	80%   { transform:rotateZ(30deg); }
	90%   { transform:rotateZ(15deg); }
	100%  { transform:rotateZ(30deg); }
}
/* ----------------------------------------- */

/* ----------- Account settings ------------ */
#user_acc_settings_form {
  display: none;
  flex-grow: 1;
}

.fade { display: none; }
.show { display: block; }

.fa-bell { color: mediumorchid; }

.modal-body::-webkit-scrollbar { width: 0 !important; }

#notif, #privacy { 
  padding: 0rem 0.6rem 0rem 0.4rem;
  overflow-x: auto;
  resize: none;
 }

.custom-switch { padding-left: 2.1rem; }

.custom-control-label {
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none; 
  user-select: none;
  cursor: pointer;
}

.custom-switch .custom-control-label::before { 
  cursor: pointer;
  background: black;
  border: none;
}

.custom-control-input:focus~.custom-control-label::before {
  box-shadow: none;
}

.custom-switch .custom-control-label::after { 
  cursor: pointer; 
  background-color: mediumorchid;
}

.custom-control-input:checked~.custom-control-label::before {
  border-color: transparent;
  background-color: darkorchid;
  box-shadow: none;
}

.custom-radio .custom-control-label::before {
  background: black;
  border: none;
}

.settings-sub-headline { font-size: 16px; color: darkorchid; }

.settings-notif-border {
  height: 3px;
  background: darkorchid;
  border: none;
}

.fa-lock { color: darkorange; }

/* ----------------------------------------- */

/* ------------- Profile post  ------------- */
.profile-post-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  align-self: center;
}
/* tab pane in profile.html containing user posts */
#prof-posts, #saved-posts {
  display: flex;
  flex-flow: column wrap;
  height: 29em;
  width: 58em;
  align-content: start;
}

.tab-content>.active {
  display: flex;
}

.prof-post-card {
  display: flex;
  justify-content: center;
  width: 32%;
  flex: 0 0 auto;
  margin: 5px;
  border-radius: 0;
  transition: transform 0.1s;
}

.prof-post-card-body {
  background-color: black;
  color: white;
  overflow: overlay;
  min-height: 25px;
  font-size: 14px;
  text-align: center;
  transition: transform 0.2s;
}

.prof-card-body-img { 
  width: 100%; 
  transition: transform 0.2s;
}

.prof-img-post-card-body { 
  padding: 0rem;
}

.prof-post-actions { display: none; }

.prof-like-ico {
  font-size: 19px;
  position: relative;
  top: 5px;
}

.prof-comment-ico {
  font-size: 19px;
  position: relative;
  top: 7px;
  margin-left: 2px;
}

.prof-likes-counter {
  font-size: 19px;
  margin-left: 5px;
  margin-right: 8px;
}

.prof-comments-counter {
  font-size: 19px;
  margin-left: 4px;
}

.prof-post-card:hover .prof-post-card-body {
  filter: brightness(0.2);
  transform: scale(1.05);
}

.prof-post-card:hover .prof-card-body-img {
  filter: brightness(0.2);
  transform: scale(1.05);
}

.prof-post-card:hover .prof-post-actions {
  display: flex;
  align-self: center;
  position: absolute;
  cursor: pointer;
}

.fa-user-lock {
  font-size: 80px;
  margin-bottom: 10px;
  color: mediumpurple;
}

.prof-posts-private {
  text-align: center;
  margin-right: 14px;
}

.fa-ghost { font-size: 63px; }

.empty-prof-posts-section {
  margin-right: 15px;
}
/* ----------------------------------------- */

/* ------------- Profile Pic --------------- */
.profile-pic-rounded {
    border-radius: 50%!important;
    overflow: hidden;
    height: 120px;
}
/* ----------------------------------------- */

/* ----------- Edit Profile btn ------------ */
.edit-prof-link {
  float:right;
  position: relative;
  bottom: 93px;
}

a:hover span {
  color: black;
}
/* ----------------------------------------- */

/* ------------ info alignment ------------- */
.follow_unfollow_user, .follow_unfollow_user:hover { border: 1.2px solid mediumslateblue; }

.about-profile {
  display: flex;
  justify-content: space-between;
  width: 100%;
}

.profile-bio { text-align: justify; }

.details-counter {
  text-align: center;
  position: relative;
  top: 7px;
  height: fit-content;
  width: fit-content;
}

#user-online, #last-activity {
  display: none;
}

#more-bio-content { display: none; }
#less { margin: 0; }
#more { display: none; }
/* ----------------------------------------- */

/* ------------ Details counter ------------ */
@media only screen and (max-width: 768px) {
  .about-profile { display: block; }

  #prof-posts, #saved-posts, .prof-post-card { width: 100%; }

  #prof-posts, #saved-posts { 
    flex-wrap: nowrap;
  }

  .post-counter {
    margin-right: 21px;
    float: left;
  }
  
  .follow-counter {
    margin-right: 21px;
    float: left;
  }
  
  .following-counter {
    float: left;
  }
}

@media only screen and (min-width: 768px) and (max-width: 1023px) {
  .about-profile { display: flex; }

  #prof-posts, #saved-posts { 
    flex-wrap: wrap; 
    width: 50em;
  }

  .post-counter {
    margin-right: 32px;
    float: left;
  }
  
  .follow-counter {
    margin-right: 32px;
    float: left;
  }
  
  .following-counter {
    float: left;
  }
}

@media only screen and (min-width: 1024px) {
  .about-profile { display: flex; }

  #prof-posts, #saved-posts { 
    flex-wrap: wrap; 
    width: 58em;
  }

  .post-counter {
    margin-right: 32px;
    float: left;
  }
  
  .follow-counter {
    margin-right: 32px;
    float: left;
  }
  
  .following-counter {
    float: left;
  }
}
/* ----------------------------------------- */

